--- a/Password Manager/Password Manager/Resources/Base.lproj/Main.storyboard
+++ b/Password Manager/Password Manager/Resources/Base.lproj/Main.storyboard
@@ -46,13 +46,13 @@
                                 </state>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="trailing" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="PeI-dI-RpJ">
-                                <rect key="frame" x="38.666666666666657" y="832" width="91" height="30"/>
+                                <rect key="frame" x="20" y="832" width="91" height="30"/>
                                 <state key="normal" title="Terms of Use">
                                     <color key="titleColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 </state>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="leading" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Kni-wK-NwA">
-                                <rect key="frame" x="284.66666666666669" y="832" width="53" height="30"/>
+                                <rect key="frame" x="341" y="832" width="53" height="30"/>
                                 <state key="normal" title="Restore">
                                     <color key="titleColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 </state>
@@ -72,13 +72,16 @@
                                 <rect key="frame" x="20" y="696" width="374" height="54"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JYA-pV-pwg">
-                                        <rect key="frame" x="8" y="5" width="41.333333333333336" height="44"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                        <nil key="textColor"/>
+                                        <rect key="frame" x="16.000000000000004" y="5" width="38.333333333333343" height="44"/>
+                                        <fontDescription key="fontDescription" type="system" weight="medium" pointSize="15"/>
+                                        <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="mUg-gZ-yea">
                                         <rect key="frame" x="317" y="11.666666666666629" width="51" height="31"/>
+                                        <connections>
+                                            <action selector="switchWasChanged:" destination="deq-rt-dow" eventType="valueChanged" id="rcz-Ua-BTq"/>
+                                        </connections>
                                     </switch>
                                 </subviews>
                                 <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -86,7 +89,7 @@
                                     <constraint firstAttribute="bottom" secondItem="JYA-pV-pwg" secondAttribute="bottom" constant="5" id="76K-kB-WFr"/>
                                     <constraint firstAttribute="trailing" secondItem="mUg-gZ-yea" secondAttribute="trailing" constant="8" id="9Ms-0k-WlQ"/>
                                     <constraint firstAttribute="height" constant="54" id="PbW-H9-95l"/>
-                                    <constraint firstItem="JYA-pV-pwg" firstAttribute="leading" secondItem="wz2-Ri-BWq" secondAttribute="leading" constant="8" id="Pdt-3o-ct1"/>
+                                    <constraint firstItem="JYA-pV-pwg" firstAttribute="leading" secondItem="wz2-Ri-BWq" secondAttribute="leading" constant="16" id="Pdt-3o-ct1"/>
                                     <constraint firstItem="mUg-gZ-yea" firstAttribute="centerY" secondItem="wz2-Ri-BWq" secondAttribute="centerY" id="pcY-SO-0Sd"/>
                                     <constraint firstItem="JYA-pV-pwg" firstAttribute="top" secondItem="wz2-Ri-BWq" secondAttribute="top" constant="5" id="xL8-4r-17k"/>
                                 </constraints>
@@ -228,21 +231,39 @@
                                 <rect key="frame" x="16" y="52" width="16" height="22"/>
                                 <state key="normal" image="close_black"/>
                             </button>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lEg-e7-Hkf">
-                                <rect key="frame" x="20" y="619.66666666666663" width="374" height="20.333333333333371"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Just $23.33 / year" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lEg-e7-Hkf">
+                                <rect key="frame" x="20" y="623.66666666666663" width="374" height="25.333333333333371"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="21"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Cow-5P-Ykj">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Auto renewable. Cancel anytime." textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Cow-5P-Ykj">
                                 <rect key="frame" x="20" y="649" width="374" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="c1S-9j-wIs"/>
                                 </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <view contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ef8-li-jUg">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="500"/>
+                                <subviews>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="eND-sU-05y" customClass="NVActivityIndicatorView" customModule="NVActivityIndicatorView">
+                                        <rect key="frame" x="187" y="428" width="40" height="40"/>
+                                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="40" id="8LF-Y5-35e"/>
+                                            <constraint firstAttribute="width" constant="40" id="YkI-mU-Xoh"/>
+                                        </constraints>
+                                    </view>
+                                </subviews>
+                                <color key="backgroundColor" white="0.0" alpha="0.59999999999999998" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstItem="eND-sU-05y" firstAttribute="centerY" secondItem="ef8-li-jUg" secondAttribute="centerY" id="XHk-Gh-uHw"/>
+                                    <constraint firstItem="eND-sU-05y" firstAttribute="centerX" secondItem="ef8-li-jUg" secondAttribute="centerX" id="ej1-Do-szA"/>
+                                </constraints>
+                            </view>
                             <pageControl hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" numberOfPages="3" translatesAutoresizingMaskIntoConstraints="NO" id="mX3-VX-1EO">
                                 <rect key="frame" x="147" y="455" width="120.33333333333331" height="26"/>
                             </pageControl>
@@ -250,12 +271,13 @@
                         <viewLayoutGuide key="safeArea" id="PbU-HB-crM"/>
                         <color key="backgroundColor" red="0.054901960784313725" green="0.054901960784313725" blue="0.066666666666666666" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
+                            <constraint firstItem="ef8-li-jUg" firstAttribute="top" secondItem="Zbq-RA-Kv2" secondAttribute="top" id="18o-iY-K68"/>
                             <constraint firstItem="6II-Oh-7Bn" firstAttribute="top" secondItem="wz2-Ri-BWq" secondAttribute="bottom" constant="8" symbolic="YES" id="3cf-e3-ucs"/>
                             <constraint firstItem="wz2-Ri-BWq" firstAttribute="leading" secondItem="PbU-HB-crM" secondAttribute="leading" constant="20" id="6fw-g9-63O"/>
-                            <constraint firstItem="Cow-5P-Ykj" firstAttribute="top" secondItem="lEg-e7-Hkf" secondAttribute="bottom" constant="9" id="95h-Xc-yIO"/>
-                            <constraint firstItem="Kni-wK-NwA" firstAttribute="leading" secondItem="C5K-RM-h91" secondAttribute="trailing" constant="30" id="9Zm-ze-tB4"/>
+                            <constraint firstItem="Cow-5P-Ykj" firstAttribute="top" secondItem="lEg-e7-Hkf" secondAttribute="bottom" id="95h-Xc-yIO"/>
                             <constraint firstItem="PbU-HB-crM" firstAttribute="trailing" secondItem="6II-Oh-7Bn" secondAttribute="trailing" constant="20" id="BuG-U2-pev"/>
                             <constraint firstItem="C5K-RM-h91" firstAttribute="bottom" secondItem="PbU-HB-crM" secondAttribute="bottom" id="DYI-2T-123"/>
+                            <constraint firstItem="ef8-li-jUg" firstAttribute="trailing" secondItem="PbU-HB-crM" secondAttribute="trailing" id="Dug-c6-oZj"/>
                             <constraint firstItem="gyw-Pf-Tjp" firstAttribute="top" secondItem="Zbq-RA-Kv2" secondAttribute="top" id="EZu-L7-goZ"/>
                             <constraint firstItem="PbU-HB-crM" firstAttribute="trailing" secondItem="wz2-Ri-BWq" secondAttribute="trailing" constant="20" id="Fkh-b3-2eQ"/>
                             <constraint firstItem="d70-o2-ahh" firstAttribute="top" secondItem="gyw-Pf-Tjp" secondAttribute="bottom" constant="8" symbolic="YES" id="Hes-1r-Ct8"/>
@@ -270,22 +292,27 @@
                             <constraint firstItem="C5K-RM-h91" firstAttribute="centerX" secondItem="Zbq-RA-Kv2" secondAttribute="centerX" id="cqt-jA-5MQ"/>
                             <constraint firstItem="PbU-HB-crM" firstAttribute="trailing" secondItem="Cow-5P-Ykj" secondAttribute="trailing" constant="20" id="fcJ-xg-hZ9"/>
                             <constraint firstItem="wz2-Ri-BWq" firstAttribute="top" secondItem="Cow-5P-Ykj" secondAttribute="bottom" constant="17" id="gyB-Ua-uy6"/>
-                            <constraint firstItem="C5K-RM-h91" firstAttribute="leading" secondItem="PeI-dI-RpJ" secondAttribute="trailing" constant="30" id="hIs-eI-eoM"/>
+                            <constraint firstItem="PeI-dI-RpJ" firstAttribute="leading" secondItem="6II-Oh-7Bn" secondAttribute="leading" id="imQ-Qo-5yU"/>
                             <constraint firstItem="QbX-6J-mlR" firstAttribute="leading" secondItem="hIq-rV-O1w" secondAttribute="leading" id="jBk-kz-mbb"/>
                             <constraint firstItem="C5K-RM-h91" firstAttribute="top" secondItem="6II-Oh-7Bn" secondAttribute="bottom" constant="25" id="kxn-ZI-LcL"/>
                             <constraint firstItem="Kni-wK-NwA" firstAttribute="centerY" secondItem="C5K-RM-h91" secondAttribute="centerY" id="o0G-Sp-rvd"/>
+                            <constraint firstAttribute="bottom" secondItem="ef8-li-jUg" secondAttribute="bottom" id="sQL-03-C7E"/>
                             <constraint firstItem="d70-o2-ahh" firstAttribute="trailing" secondItem="PbU-HB-crM" secondAttribute="trailing" id="vKb-55-AqP"/>
                             <constraint firstItem="mX3-VX-1EO" firstAttribute="top" secondItem="d70-o2-ahh" secondAttribute="bottom" constant="8" symbolic="YES" id="vOc-Ra-b1s"/>
                             <constraint firstItem="lEg-e7-Hkf" firstAttribute="leading" secondItem="Cow-5P-Ykj" secondAttribute="leading" id="wtH-33-He7"/>
+                            <constraint firstItem="Kni-wK-NwA" firstAttribute="trailing" secondItem="6II-Oh-7Bn" secondAttribute="trailing" id="xD0-9O-eeu"/>
+                            <constraint firstItem="ef8-li-jUg" firstAttribute="leading" secondItem="PbU-HB-crM" secondAttribute="leading" id="z6h-Aj-UNM"/>
                             <constraint firstItem="PeI-dI-RpJ" firstAttribute="centerY" secondItem="C5K-RM-h91" secondAttribute="centerY" id="zI9-t5-qNp"/>
                         </constraints>
                     </view>
                     <connections>
+                        <outlet property="blackView" destination="ef8-li-jUg" id="gUs-Fh-6dV"/>
                         <outlet property="cancelLabel" destination="Cow-5P-Ykj" id="qAK-3q-pAT"/>
                         <outlet property="centerView" destination="KLH-Ar-OXP" id="AoP-Kk-trM"/>
                         <outlet property="closeButton" destination="QbX-6J-mlR" id="IAz-T8-QVU"/>
                         <outlet property="imagesContainerView" destination="gyw-Pf-Tjp" id="KLg-0e-K5i"/>
                         <outlet property="imagesScrollView" destination="v1o-xB-qVh" id="hyf-XQ-Czb"/>
+                        <outlet property="indicator" destination="eND-sU-05y" id="06O-Nq-8aP"/>
                         <outlet property="leftView" destination="hIq-rV-O1w" id="TO6-Ur-HL5"/>
                         <outlet property="pageControl" destination="mX3-VX-1EO" id="hgS-NK-HPC"/>
                         <outlet property="priceLabel" destination="lEg-e7-Hkf" id="IVj-aY-XOT"/>
