--- a/Password Manager/Password Manager/Resources/Base.lproj/Main.storyboard
+++ b/Password Manager/Password Manager/Resources/Base.lproj/Main.storyboard
@@ -58,10 +58,10 @@
                                 </state>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6II-Oh-7Bn">
-                                <rect key="frame" x="20" y="758" width="374" height="49"/>
+                                <rect key="frame" x="20" y="632" width="374" height="54"/>
                                 <color key="backgroundColor" systemColor="linkColor"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="49" id="Q1w-uz-UkW"/>
+                                    <constraint firstAttribute="height" constant="54" id="Q1w-uz-UkW"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="20"/>
                                 <state key="normal">
@@ -69,7 +69,7 @@
                                 </state>
                             </button>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="wz2-Ri-BWq">
-                                <rect key="frame" x="20" y="696" width="374" height="54"/>
+                                <rect key="frame" x="20" y="570" width="374" height="54"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JYA-pV-pwg">
                                         <rect key="frame" x="16.000000000000004" y="5" width="38.333333333333343" height="44"/>
@@ -97,7 +97,7 @@
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="gyw-Pf-Tjp">
                                 <rect key="frame" x="0.0" y="0.0" width="414" height="269"/>
                                 <subviews>
-                                    <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" ambiguous="YES" pagingEnabled="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" translatesAutoresizingMaskIntoConstraints="NO" id="v1o-xB-qVh">
+                                    <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" userInteractionEnabled="NO" contentMode="scaleToFill" ambiguous="YES" pagingEnabled="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" translatesAutoresizingMaskIntoConstraints="NO" id="v1o-xB-qVh">
                                         <rect key="frame" x="0.0" y="0.0" width="414" height="269"/>
                                         <viewLayoutGuide key="contentLayoutGuide" id="dKZ-2A-8CV"/>
                                         <viewLayoutGuide key="frameLayoutGuide" id="SyI-Ee-IDE"/>
@@ -208,7 +208,7 @@
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="d70-o2-ahh">
                                 <rect key="frame" x="0.0" y="277" width="414" height="170"/>
                                 <subviews>
-                                    <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" ambiguous="YES" pagingEnabled="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" translatesAutoresizingMaskIntoConstraints="NO" id="L3h-EB-Gqz">
+                                    <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" userInteractionEnabled="NO" contentMode="scaleToFill" ambiguous="YES" pagingEnabled="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" translatesAutoresizingMaskIntoConstraints="NO" id="L3h-EB-Gqz">
                                         <rect key="frame" x="0.0" y="0.0" width="414" height="170"/>
                                         <viewLayoutGuide key="contentLayoutGuide" id="aYv-1R-z1g"/>
                                         <viewLayoutGuide key="frameLayoutGuide" id="e0e-EG-6gM"/>
@@ -231,14 +231,14 @@
                                 <rect key="frame" x="16" y="52" width="16" height="22"/>
                                 <state key="normal" image="close_black"/>
                             </button>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Just $23.33 / year" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lEg-e7-Hkf">
-                                <rect key="frame" x="20" y="623.66666666666663" width="374" height="25.333333333333371"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lEg-e7-Hkf">
+                                <rect key="frame" x="20" y="527" width="374" height="0.0"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="21"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Auto renewable. Cancel anytime." textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Cow-5P-Ykj">
-                                <rect key="frame" x="20" y="649" width="374" height="30"/>
+                                <rect key="frame" x="20" y="523" width="374" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="c1S-9j-wIs"/>
                                 </constraints>
@@ -246,8 +246,8 @@
                                 <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <view contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ef8-li-jUg">
-                                <rect key="frame" x="0.0" y="0.0" width="414" height="500"/>
+                            <view hidden="YES" contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ef8-li-jUg">
+                                <rect key="frame" x="0.0" y="318" width="414" height="179"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="eND-sU-05y" customClass="NVActivityIndicatorView" customModule="NVActivityIndicatorView">
                                         <rect key="frame" x="187" y="428" width="40" height="40"/>
@@ -272,9 +272,7 @@
                         <color key="backgroundColor" red="0.054901960784313725" green="0.054901960784313725" blue="0.066666666666666666" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="ef8-li-jUg" firstAttribute="top" secondItem="Zbq-RA-Kv2" secondAttribute="top" id="18o-iY-K68"/>
-                            <constraint firstItem="6II-Oh-7Bn" firstAttribute="top" secondItem="wz2-Ri-BWq" secondAttribute="bottom" constant="8" symbolic="YES" id="3cf-e3-ucs"/>
                             <constraint firstItem="wz2-Ri-BWq" firstAttribute="leading" secondItem="PbU-HB-crM" secondAttribute="leading" constant="20" id="6fw-g9-63O"/>
-                            <constraint firstItem="Cow-5P-Ykj" firstAttribute="top" secondItem="lEg-e7-Hkf" secondAttribute="bottom" id="95h-Xc-yIO"/>
                             <constraint firstItem="PbU-HB-crM" firstAttribute="trailing" secondItem="6II-Oh-7Bn" secondAttribute="trailing" constant="20" id="BuG-U2-pev"/>
                             <constraint firstItem="C5K-RM-h91" firstAttribute="bottom" secondItem="PbU-HB-crM" secondAttribute="bottom" id="DYI-2T-123"/>
                             <constraint firstItem="ef8-li-jUg" firstAttribute="trailing" secondItem="PbU-HB-crM" secondAttribute="trailing" id="Dug-c6-oZj"/>
@@ -283,22 +281,24 @@
                             <constraint firstItem="d70-o2-ahh" firstAttribute="top" secondItem="gyw-Pf-Tjp" secondAttribute="bottom" constant="8" symbolic="YES" id="Hes-1r-Ct8"/>
                             <constraint firstItem="mX3-VX-1EO" firstAttribute="centerX" secondItem="Zbq-RA-Kv2" secondAttribute="centerX" id="Kgp-CC-0ma"/>
                             <constraint firstItem="lEg-e7-Hkf" firstAttribute="trailing" secondItem="Cow-5P-Ykj" secondAttribute="trailing" id="Mac-rb-CUX"/>
+                            <constraint firstItem="6II-Oh-7Bn" firstAttribute="top" secondItem="wz2-Ri-BWq" secondAttribute="bottom" constant="8" symbolic="YES" id="Nf2-Ef-T97"/>
                             <constraint firstItem="QbX-6J-mlR" firstAttribute="top" secondItem="PbU-HB-crM" secondAttribute="top" constant="8" id="OfS-xa-Rm0"/>
                             <constraint firstItem="gyw-Pf-Tjp" firstAttribute="leading" secondItem="PbU-HB-crM" secondAttribute="leading" id="Val-SR-bpb"/>
                             <constraint firstItem="Cow-5P-Ykj" firstAttribute="leading" secondItem="PbU-HB-crM" secondAttribute="leading" constant="20" id="WUy-i5-4AG"/>
                             <constraint firstItem="gyw-Pf-Tjp" firstAttribute="trailing" secondItem="PbU-HB-crM" secondAttribute="trailing" id="XAQ-1F-07k"/>
                             <constraint firstItem="d70-o2-ahh" firstAttribute="leading" secondItem="PbU-HB-crM" secondAttribute="leading" id="XQq-XR-TVe"/>
+                            <constraint firstItem="Cow-5P-Ykj" firstAttribute="top" secondItem="lEg-e7-Hkf" secondAttribute="bottom" constant="-4" id="YHf-6u-Ktv"/>
                             <constraint firstItem="6II-Oh-7Bn" firstAttribute="leading" secondItem="PbU-HB-crM" secondAttribute="leading" constant="20" id="cCY-iP-aTw"/>
                             <constraint firstItem="C5K-RM-h91" firstAttribute="centerX" secondItem="Zbq-RA-Kv2" secondAttribute="centerX" id="cqt-jA-5MQ"/>
                             <constraint firstItem="PbU-HB-crM" firstAttribute="trailing" secondItem="Cow-5P-Ykj" secondAttribute="trailing" constant="20" id="fcJ-xg-hZ9"/>
-                            <constraint firstItem="wz2-Ri-BWq" firstAttribute="top" secondItem="Cow-5P-Ykj" secondAttribute="bottom" constant="17" id="gyB-Ua-uy6"/>
+                            <constraint firstItem="wz2-Ri-BWq" firstAttribute="top" secondItem="Cow-5P-Ykj" secondAttribute="bottom" constant="17" id="hdb-nH-B0r"/>
                             <constraint firstItem="PeI-dI-RpJ" firstAttribute="leading" secondItem="6II-Oh-7Bn" secondAttribute="leading" id="imQ-Qo-5yU"/>
                             <constraint firstItem="QbX-6J-mlR" firstAttribute="leading" secondItem="hIq-rV-O1w" secondAttribute="leading" id="jBk-kz-mbb"/>
-                            <constraint firstItem="C5K-RM-h91" firstAttribute="top" secondItem="6II-Oh-7Bn" secondAttribute="bottom" constant="25" id="kxn-ZI-LcL"/>
                             <constraint firstItem="Kni-wK-NwA" firstAttribute="centerY" secondItem="C5K-RM-h91" secondAttribute="centerY" id="o0G-Sp-rvd"/>
                             <constraint firstAttribute="bottom" secondItem="ef8-li-jUg" secondAttribute="bottom" id="sQL-03-C7E"/>
                             <constraint firstItem="d70-o2-ahh" firstAttribute="trailing" secondItem="PbU-HB-crM" secondAttribute="trailing" id="vKb-55-AqP"/>
                             <constraint firstItem="mX3-VX-1EO" firstAttribute="top" secondItem="d70-o2-ahh" secondAttribute="bottom" constant="8" symbolic="YES" id="vOc-Ra-b1s"/>
+                            <constraint firstItem="lEg-e7-Hkf" firstAttribute="top" secondItem="d70-o2-ahh" secondAttribute="bottom" constant="80" id="wQv-8Q-xBf"/>
                             <constraint firstItem="lEg-e7-Hkf" firstAttribute="leading" secondItem="Cow-5P-Ykj" secondAttribute="leading" id="wtH-33-He7"/>
                             <constraint firstItem="Kni-wK-NwA" firstAttribute="trailing" secondItem="6II-Oh-7Bn" secondAttribute="trailing" id="xD0-9O-eeu"/>
                             <constraint firstItem="ef8-li-jUg" firstAttribute="leading" secondItem="PbU-HB-crM" secondAttribute="leading" id="z6h-Aj-UNM"/>
@@ -309,19 +309,24 @@
                         <outlet property="blackView" destination="ef8-li-jUg" id="gUs-Fh-6dV"/>
                         <outlet property="cancelLabel" destination="Cow-5P-Ykj" id="qAK-3q-pAT"/>
                         <outlet property="centerView" destination="KLH-Ar-OXP" id="AoP-Kk-trM"/>
+                        <outlet property="centerViewTextLabel" destination="Ih5-fU-xRG" id="4kx-0x-cF7"/>
                         <outlet property="closeButton" destination="QbX-6J-mlR" id="IAz-T8-QVU"/>
                         <outlet property="imagesContainerView" destination="gyw-Pf-Tjp" id="KLg-0e-K5i"/>
                         <outlet property="imagesScrollView" destination="v1o-xB-qVh" id="hyf-XQ-Czb"/>
                         <outlet property="indicator" destination="eND-sU-05y" id="06O-Nq-8aP"/>
                         <outlet property="leftView" destination="hIq-rV-O1w" id="TO6-Ur-HL5"/>
+                        <outlet property="leftViewTextLabel" destination="r5L-Hw-8Vg" id="YbA-Xc-kE5"/>
                         <outlet property="pageControl" destination="mX3-VX-1EO" id="hgS-NK-HPC"/>
                         <outlet property="priceLabel" destination="lEg-e7-Hkf" id="IVj-aY-XOT"/>
+                        <outlet property="priceLabelTopConstraint" destination="wQv-8Q-xBf" id="EFM-vc-eWc"/>
                         <outlet property="privacyButton" destination="C5K-RM-h91" id="i5E-cQ-W6d"/>
                         <outlet property="purchaseButton" destination="6II-Oh-7Bn" id="49w-I7-Bpr"/>
                         <outlet property="restoreButton" destination="Kni-wK-NwA" id="XCU-ab-jx1"/>
                         <outlet property="reviewsContainerView" destination="d70-o2-ahh" id="0pV-4l-5iE"/>
                         <outlet property="reviewsScrollView" destination="L3h-EB-Gqz" id="xFJ-tt-Be0"/>
                         <outlet property="rightView" destination="Ivu-Hd-QKx" id="Cvh-1s-o6F"/>
+                        <outlet property="rightViewTextLabel" destination="WPg-WU-1o3" id="bzD-dS-C1O"/>
+                        <outlet property="switchViewTopConstraint" destination="hdb-nH-B0r" id="bRP-YL-DmU"/>
                         <outlet property="switcherContainerView" destination="wz2-Ri-BWq" id="doO-sB-aja"/>
                         <outlet property="switcherLabel" destination="JYA-pV-pwg" id="p7Q-Jf-pwX"/>
                         <outlet property="switcherTrial" destination="mUg-gZ-yea" id="JB8-68-0wE"/>
